# neodiff

./: .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  README.md  index.html
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
demo/: demo.webm  docker-compose.yml  run.sh  source.cypher  target.cypher
src/: lib.rs  main.rs
